kubernetes-templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${NAME}-deployment
  namespace: ${NAME}
  labels:
    app: ${NAME}-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${NAME}-deployment
  template:
    metadata:
      labels:
        app: ${NAME}-deployment
    spec:
      containers:
        - name: ${NAME}
          imagePullPolicy: Always
          image: ${IMAGE}:${VERSION}
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "400Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ${NAME}-registry
