kubernetes-templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}-service
  namespace: ${NAME}
spec:
  clusterIP: None
  selector:
    app: ${NAME}-deployment
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
