kubernetes-templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${NAME}-ingress
  namespace: ${NAME}
  annotations:
    "nginx.ingress.kubernetes.io/proxy-read-timeout": "86400"
    "nginx.ingress.kubernetes.io/proxy-connect-timeout": "86400"
    "nginx.ingress.kubernetes.io/eventsource": "true"
    "nginx.ingress.kubernetes.io/configuration-snippet": |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
    "kubernetes.io/ingress.class": "nginx"
    "kubernetes.io/tls-acme": "true"
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${NAME}-service
                port:
                  number: 3000
  tls:
    - hosts:
        - "${DOMAIN}"
      secretName: ${NAME}-tls
